--- a/seesea-gateway/src/main/resources/bootstrap.yml
+++ b/seesea-gateway/src/main/resources/bootstrap.yml
@@ -31,7 +31,7 @@ spring:
   application:
     name: seesea-gateway
   profiles:
-    active: home
+    active: local
 eureka:
   client:
     register-with-eureka: true
