--- a/seesea-gateway/pom.xml
+++ b/seesea-gateway/pom.xml
@@ -27,6 +27,8 @@
         </dependency>
 
 
+
+
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
@@ -98,7 +100,17 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-feign</artifactId>
+            <version>1.4.7.RELEASE</version>
+        </dependency>
 
+        <dependency>
+            <groupId>com.seesea</groupId>
+            <artifactId>seesea-fegin</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
