--- a/seesea-gateway/pom.xml
+++ b/seesea-gateway/pom.xml
@@ -111,6 +111,12 @@
             <artifactId>seesea-fegin</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
     </dependencies>
 
 
