--- a/seesea-sms/pom.xml
+++ b/seesea-sms/pom.xml
@@ -63,7 +63,10 @@
             <artifactId>druid</artifactId>
             <version>1.0.28</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>com.seesea</groupId>
