--- a/seesea-fegin/pom.xml
+++ b/seesea-fegin/pom.xml
@@ -15,6 +15,16 @@
             <artifactId>spring-cloud-openfeign-core</artifactId>
             <version>2.2.2.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-hystrix</artifactId>
+            <version>10.7.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.netflix.hystrix</groupId>
+            <artifactId>hystrix-javanica</artifactId>
+            <version>1.5.18</version>
+        </dependency>
     </dependencies>
 
 
